.archive/ai/filebrowser/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: filebrowser
  namespace: ai
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "7000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
